--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -13,19 +13,11 @@
     transition: all 0.3s ease-out;
 }
 
-.fade-slide-enter {
-
-}
-
-.fade-slide-enter-active {
+.ModalOpen {
     animation: openModal 0.4s ease-out forwards;
 }
 
-.fade-slide-exit {
-
-}
-
-.fade-slide-exit-active {
+.ModalClosed {
     animation: closeModal 1s ease-out forwards;
 }
 
